apps/shop-online/backend-deployment&svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: shop-online
  annotations:
    # annotations for keel to update the image
    keel.sh/policy: "all"
    keel.sh/trigger: "poll"
    keel.sh/pollSchedule: "@every 3m"
spec:
  selector:
    matchLabels:
      app: backend-lab4
 # replicas: 1
  template:
    metadata:
      labels:
        app: backend-lab4
    spec:
      # podAntiAffinity the pods will be runing on different nodes
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - backend-lab4
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: lab4-backend
        image: shlomobarzili/flask-backend:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5050
          protocol: TCP

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: lab4-backend-svc
  namespace: shop-online # the namespace that sperate the pods between envroments.
spec:
  selector:
    app: backend-lab4
  type: ClusterIP # the type of the service
  ports:
    - protocol: TCP
      port: 5050   # the port svc that expose
      targetPort: 5050 # the port of the pod | container
