apps/shop-online/db-deploment-svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: shop-online
  labels:
    app: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: shlomobarzili/mongodb:latest
        ports:
        - containerPort: 27017

        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi

        volumeMounts:
        - name:  db-shop-storage
          mountPath: /data/db # default path should be /data/db its for mongodb
      volumes:
        - name: db-shop-storage
          persistentVolumeClaim:
            claimName: db-shop-pvc      

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
  namespace: shop-online
spec:
  selector:
    app: mongodb
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
