apps/shop-online/fronted-deployment&svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fronted  # react-front
  namespace: shop-online
  annotations:
    # annotations for keel to update the image
    keel.sh/policy: "all"
    keel.sh/trigger: "poll"
    keel.sh/pollSchedule: "@every 3m"
spec:
  selector:
    matchLabels:
      app: fronted
 # replicas: 1
  template:
    metadata:
      labels:
        app: fronted
    spec:
         # podAntiAffinity the pods will be runing on different nodes
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - fronted
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: lab4
        image: shlomobarzili/react-fronted:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP

        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: fronted-svc
  namespace: shop-online # the namespace that sperate the pods between envroments.
spec:
  selector:
    app: fronted
  type: ClusterIP # the type of the service
  ports:
    - protocol: TCP
      port: 3000   # the port svc that expose
      targetPort: 3000 # the port of the pod
