apps/shop-online/fronted-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fronted-ingress
  namespace: shop-online # the namespace that separates the pods between environments.
  annotations:
    kubernetes.io/ingress.class: alb # the type alb 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip # the alb move the traffic directly to pods
    alb.ingress.kubernetes.io/security-groups: sg-09b52735903593977
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:148088962203:certificate/0e29c21b-6890-4848-a3d6-db640f1cc0d9
    alb.ingress.kubernetes.io/subnets: subnet-06ecc8dce3939bc67,subnet-09e3ef8e74de1afaf # Public subnetbs
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}, {"HTTP": 3000}]' # listen ports
    external-dns.alpha.kubernetes.io/ttl: "60"
    alb.ingress.kubernetes.io/actions.ssl-redirect: > # redirect to https
      {"type": "redirect", "redirectConfig": { "protocol": "HTTPS", "port": "443", "statusCode": "HTTP_301"}}
   # alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:us-east-1:148088962203:regional/webacl/blackjack-waf/6583d044-16e4-4b0c-99fb-20864ea5b1f8

spec:
  ingressClassName: alb
  rules:
    - host: shop-online.spider-shlomo.com
      http:
        paths:
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: ssl-redirect
          #       port:
          #         name: use-annotation  # Ensure HTTPS redirect happens

          # - path: /register
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: ssl-redirect
          #       port:
          #         name: use-annotation  # Ensure HTTPS redirect happens        

          - path: /
            pathType: Exact
            backend:
              service:
                name: fronted-svc
                port:
                  number: 3000

          - path: /add-product
            pathType: Exact
            backend:
              service:
                name: fronted-svc
                port:
                  number: 3000    

          - path: /login
            pathType: Exact
            backend:
              service:
                name: fronted-svc
                port:
                  number: 3000  

          - path: /register
            pathType: Exact
            backend:
              service:
                name: fronted-svc
                port:
                  number: 3000
